# -nfl-4th-down-model

./: README.md  pyproject.toml  streamlit_app.py
data/: curve_seed.csv
examples/: README.md  sample_output.csv  sample_output.json  sample_plays.csv
scripts/: generate_lookup_tables.py
src/: main.py
src/nfl4th/: __init__.py  cli.py  lookups.json  model.py
tests/: test_model.py
